--- a/Notifications.Wpf.Core.Sample/App.xaml
+++ b/Notifications.Wpf.Core.Sample/App.xaml
@@ -4,6 +4,7 @@
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:controls="clr-namespace:Notifications.Wpf.Core.Controls;assembly=Notifications.Wpf.Core"
              xmlns:local="clr-namespace:Notifications.Wpf.Core.Sample"
+             ShutdownMode="OnMainWindowClose"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 
