--- a/Notifications.Wpf.Core.Sample/MainWindow.xaml
+++ b/Notifications.Wpf.Core.Sample/MainWindow.xaml
@@ -1,17 +1,24 @@
-﻿<Window x:Class="Notifications.Wpf.Core.Sample.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-         xmlns:controls="clr-namespace:Notifications.Wpf.Core.Controls;assembly=Notifications.Wpf.Core"
-        xmlns:local="clr-namespace:Notifications.Wpf.Core.Sample"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="Notifications.Wpf.Core.Sample.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Notifications.Wpf.Core.Controls;assembly=Notifications.Wpf.Core"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Notifications.Wpf.Core.Sample"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <DockPanel>
         <UniformGrid DockPanel.Dock="Bottom" Rows="1">
-            <Button Content="Show" Click="Show_Click" />
-            <Button Content="Show in window" Click="ShowWindow_Click" />
+            <Button Click="Show_Click" Content="Show" />
+            <Button Click="ShowWindow_Click" Content="Show in window" />
+            <Button Click="CloseAll_Click" Content="Close all" />
         </UniformGrid>
-        <controls:NotificationArea x:Name="WindowArea" Position="TopLeft" MaxItems="3" />
+        <controls:NotificationArea
+            x:Name="WindowArea"
+            MaxItems="3"
+            Position="TopLeft" />
     </DockPanel>
 </Window>
