--- a/Notifications.Wpf.Core.Sample/App.xaml
+++ b/Notifications.Wpf.Core.Sample/App.xaml
@@ -1,22 +1,118 @@
-﻿<Application x:Class="Notifications.Wpf.Core.Sample.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:system="clr-namespace:System;assembly=mscorlib"
-             xmlns:controls="clr-namespace:Notifications.Wpf.Core.Controls;assembly=Notifications.Wpf.Core"
-             xmlns:local="clr-namespace:Notifications.Wpf.Core.Sample"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="Notifications.Wpf.Core.Sample.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Notifications.Wpf.Core.Controls;assembly=Notifications.Wpf.Core"
+    xmlns:local="clr-namespace:Notifications.Wpf.Core.Sample"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
 
-        <local:CustomTemplateSelector x:Key="CustomTemplateSelector" />
+        <Path
+            x:Key="ErrorIcon"
+            x:Shared="False"
+            Data="M 2.6874995 2.8246546e-7 -4.7683716e-7 2.6855503 5.3007795 7.9863303 -4.7683716e-7 13.28516 2.6874995 15.97266 l 5.29883 -5.30079 5.3007805 5.30079 2.68554 -2.6875 -5.29882 -5.2988297 5.29882 -5.30078 L 13.28711 2.8246546e-7 7.9863295 5.2988303 2.6874995 2.8246546e-7 Z"
+            Fill="White" />
+        <Path
+            x:Key="SuccessIcon"
+            x:Shared="False"
+            Data="M 15.56055 5.9323048e-7 7.53125 10.197261 2.73242 5.2304706 0 7.8710906 7.82422 15.968751 18.54492 2.3515606 15.56055 5.9323048e-7 Z"
+            Fill="White" />
+        <Path
+            x:Key="InfoIcon"
+            x:Shared="False"
+            Data="M 10.968748 8.9809305e-8 C 4.9320181 8.9809305e-8 -1.9073487e-6 4.9320201 -1.9073487e-6 10.96875 c 0 6.03672 4.9322600073487 10.9668 10.9687499073487 10.9668 6.03648 0 10.96875 -4.93008 10.96875 -10.9668 C 21.937498 4.9320201 17.005458 8.9809305e-8 10.968748 8.9809305e-8 Z m 0 2.000000010190695 c 4.95043 0 8.96875 4.0183 8.96875 8.9687499 0 4.95044 -4.01809 8.9668 -8.96875 8.9668 -4.9506899 0 -8.9687499 -4.01636 -8.9687499 -8.9668 0 -4.9504499 4.0183 -8.9687499 8.9687499 -8.9687499 z m -1.4999999 2.49805 0 3 2.9999999 0 0 -3 -2.9999999 0 z m 0 4.4707 0 8.9101599 2.9999999 0 0 -8.9101599 -2.9999999 0 z"
+            Fill="White" />
+        <Path
+            x:Key="WarningIcon"
+            x:Shared="False"
+            Data="M 12.414089 4.6396565e-7 C 12.128679 -9.5360343e-6 11.832699 0.06810046 11.574249 0.19726046 c -0.29252 0.14627 -0.55012 0.39584 -0.70899 0.67383 l -0.002 0.002 L 0.22067905 19.77348 l -0.0117 0.0234 C 0.08326905 20.04831 -9.5367432e-7 20.33976 -9.5367432e-7 20.64844 c 0 0.30629 0.0851000036743 0.62597 0.23633000367432 0.89063 0.13469 0.2357 0.31957 0.44504 0.5332 0.60937 l 0.0137 0.0117 0.0156 0.01 C 1.076789 22.36867 1.440719 22.48654 1.785149 22.48654 l 21.28516 0 c 0.3398 0 0.70907 -0.12364 0.98828 -0.33398 0.2208 -0.16158 0.42089 -0.3689 0.56055 -0.61328 0.15122 -0.26466 0.23633 -0.58434 0.23633 -0.89063 0 -0.30868 -0.0852 -0.60013 -0.21094 -0.85156 l -0.01 -0.0234 -10.66992 -18.90038954 -0.002 -0.002 c -0.15887 -0.27808 -0.41633 -0.52756 -0.70899 -0.67383 -0.25845 -0.12918 -0.55443 -0.19726999603 -0.83984 -0.19725999603 z m 0 2.19531003603435 10.32617 18.2910095 -20.625 0 10.29883 -18.2910095 z m -1.48633 3.84765 0 8.9121095 3 0 0 -8.9121095 -3 0 z m 0 10.3808595 0 3 3 0 0 -3 -3 0 z"
+            Fill="White" />
+
+        <!--  Define the custom template selector  -->
+        <local:CustomNotificationTemplateSelector x:Key="CustomNotificationTemplateSelector" />
 
         <Style TargetType="controls:Notification">
-            <Setter Property="ContentTemplateSelector" Value="{StaticResource CustomTemplateSelector}" />
+            <!--  Replace the default template selector with the one you defined above  -->
+            <Setter Property="ContentTemplateSelector" Value="{StaticResource CustomNotificationTemplateSelector}" />
+
+            <!--  Add the templates that you want to use  -->
             <Style.Resources>
-                <DataTemplate DataType="{x:Type system:String}" x:Key="PinkStringTemplate">
-                    <Label MinHeight="80"
-                           Content="{Binding}"
-                           Foreground="DeepPink" HorizontalContentAlignment="Center"
-                           VerticalContentAlignment="Center" />
+                <DataTemplate x:Key="PinkStringTemplate" DataType="{x:Type system:String}">
+                    <Label
+                        MinHeight="80"
+                        HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Center"
+                        Content="{Binding}"
+                        Foreground="DeepPink" />
+                </DataTemplate>
+
+                <DataTemplate x:Key="CustomNotificationTemplate" DataType="{x:Type local:CustomThemedNotificationContent}">
+                    <Border
+                        x:Name="Border"
+                        MinHeight="80"
+                        Padding="12">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ContentControl
+                                Width="25"
+                                Height="25"
+                                Margin="0,0,12,0"
+                                VerticalAlignment="Top">
+                                <ContentControl
+                                    x:Name="Icon"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center" />
+                            </ContentControl>
+                            <DockPanel Grid.Column="1">
+                                <TextBlock
+                                    DockPanel.Dock="Top"
+                                    FontWeight="Medium"
+                                    Text="{Binding Title}"
+                                    TextTrimming="CharacterEllipsis">
+                                    <TextBlock.Effect>
+                                        <DropShadowEffect
+                                            RenderingBias="Performance"
+                                            ShadowDepth="1"
+                                            Color="Black" />
+                                    </TextBlock.Effect>
+                                </TextBlock>
+                                <TextBlock
+                                    Margin="0,0,12,0"
+                                    Opacity="1"
+                                    Text="{Binding Message}"
+                                    TextWrapping="Wrap">
+                                    <TextBlock.Effect>
+                                        <DropShadowEffect
+                                            RenderingBias="Performance"
+                                            ShadowDepth="1"
+                                            Color="Black" />
+                                    </TextBlock.Effect>
+                                </TextBlock>
+                            </DockPanel>
+                        </Grid>
+                    </Border>
+                    <DataTemplate.Triggers>
+                        <DataTrigger Binding="{Binding Type}" Value="Information">
+                            <Setter TargetName="Icon" Property="Content" Value="{StaticResource InfoIcon}" />
+                            <Setter TargetName="Border" Property="Background" Value="CornflowerBlue" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Type}" Value="Success">
+                            <Setter TargetName="Icon" Property="Content" Value="{StaticResource SuccessIcon}" />
+                            <Setter TargetName="Border" Property="Background" Value="LimeGreen" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Type}" Value="Warning">
+                            <Setter TargetName="Icon" Property="Content" Value="{StaticResource WarningIcon}" />
+                            <Setter TargetName="Border" Property="Background" Value="Orange" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Type}" Value="Error">
+                            <Setter TargetName="Icon" Property="Content" Value="{StaticResource ErrorIcon}" />
+                            <Setter TargetName="Border" Property="Background" Value="OrangeRed" />
+                        </DataTrigger>
+                    </DataTemplate.Triggers>
                 </DataTemplate>
             </Style.Resources>
         </Style>
